<resources>
    <string name="app_name">Ma réu</string>
    <string name="reunion">Salle %1$d - %2$dh%3$s - %4$s</string>
    <string name="reunionPage">Salle %1$d - %2$dh%3$s - %4$s %5$d - %6$s</string>

    Créer la réunion

    <string name="CreerReu">Réunion</string>
    <string name="Enregistrer">Enregistrer</string>
    <string name="SalleReu">Salle où se passera la réunion</string>
    <string name="hostReu">Organisateur de la réunion : </string>
    <string name="hintHost">Nom de l\'organisateur</string>
    <string name="textParti">Participants</string>
    <string name="hintParti">Email des participants</string>
    <string name="textCreate">Créer la réunion</string>
    <string name="textCreaDate">%1$s %2$d %3$s %4$d</string>
    <string name="textAddParti">Veuillez rentrer un email valide</string>
    <string name="textPartiAdd">Participant ajouté</string>
    <string name="textHeureDebut">Heure de début</string>
    <string name="textHeureFin">Heure de fin</string>
    <string name="ToastHeure">La réunion finit avant de commencer.</string>
    <string name="ToastChampVide">Veuillez remplir les champs</string>
    <string name="ToastCreation">Réunion crée</string>
    <string name="ToastHeureDebut">L\'heure de début est avant l\'heure actuelle.</string>

    Filter Réunion

    <string name="filter">Filtre</string>
    <string name="darkmode">Dark mode</string>
    <string name="txtChoixSalle">Quelles salles voulez vous voir?</string>
    <string name="txtheureReu">Date réunion</string>
    <string name="txtHost">Organisateur de la réunion</string>
    <string name="btnSearch">Filtrer les réunions</string>
    <string name="txtHeure">%1$s:%2$s</string>

    ReunionPage

    <string name="salleNumber">Salle %1$d</string>
    <string name="heureReunion">%1$dh%2$s - %3$s %4$d %5$s</string>
    <string name="textReunion">Sujet de la réunion</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

</resources>
