<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.FilterReuFrag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/txtFiltre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/filter"
        android:textSize="30dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/txtSalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtFiltre"
        android:layout_marginTop="15dp"
        android:text="@string/txtChoixSalle"/>

    <GridLayout
        android:id="@+id/gridSalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtSalle"
        android:columnCount="5"
        android:rowCount="2"
        android:padding="5dp">
        <CheckBox
            android:id="@+id/salle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:layout_column="0"
            android:layout_row="0"/>

        <CheckBox
            android:id="@+id/salle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:layout_column="1"
            android:layout_row="0"/>

        <CheckBox
            android:id="@+id/salle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:layout_column="2"
            android:layout_row="0"/>

        <CheckBox
            android:id="@+id/salle4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"
            android:layout_column="3"
            android:layout_row="0"/>

        <CheckBox
            android:id="@+id/salle5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"
            android:layout_column="4"
            android:layout_row="0"/>

        <CheckBox
            android:id="@+id/salle6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6"
            android:layout_column="0"
            android:layout_row="1"/>

        <CheckBox
            android:id="@+id/salle7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="7"
            android:layout_column="1"
            android:layout_row="1"/>

        <CheckBox
            android:id="@+id/salle8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8"
            android:layout_column="2"
            android:layout_row="1"/>

        <CheckBox
            android:id="@+id/salle9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9"
            android:layout_column="3"
            android:layout_row="1"/>

        <CheckBox
            android:id="@+id/salle10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:layout_column="4"
            android:layout_row="1"/>
    </GridLayout>

    <TextView
        android:id="@+id/txtHeure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gridSalle"
        android:layout_marginTop="15dp"
        android:text="@string/txtheureReu"/>

    <TextView
        android:id="@+id/btnHeure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtHeure"
        app:layout_constraintStart_toStartOf="parent"
        android:text="15:30"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/txtHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnHeure"
        android:layout_marginTop="15dp"
        android:text="@string/txtHost"/>

    <EditText
        android:id="@+id/editHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtHost"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/btnTxtSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editHost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/colorBtnCreate"
        android:text="@string/btnSearch"
        android:layout_marginTop="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>