<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.CreateReuFrag">

    <TextView
        android:id="@+id/txtReu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreerReu"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enregistrer"
        android:textSize="16sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="3dp"
        android:paddingBottom="5dp"
        android:textColor="@color/colorBtnCreate"
        android:background="@drawable/btn_border"
        app:layout_constraintEnd_toEndOf="@id/txtReu"
        app:layout_constraintTop_toTopOf="@id/txtReu"
        app:layout_constraintBottom_toBottomOf="@id/txtReu"/>

    <View
        android:id="@+id/viewDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="15dp"
        android:background="#959292"
        app:layout_constraintTop_toBottomOf="@id/txtReu" />

    <ImageView
        android:id="@+id/imgClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_access_time_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/btnCreaDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnCreaDate" />

    <TextView
        android:id="@+id/btnCreaDate"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toStartOf="@id/btnHeureCrea"
        app:layout_constraintStart_toEndOf="@id/imgClock"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/viewDivider" />


    <TextView
        android:id="@+id/btnHeureCrea"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewDivider" />

    <View
        android:id="@+id/viewDivider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="15dp"
        android:background="#959292"
        app:layout_constraintTop_toBottomOf="@id/btnHeureCrea" />

    <ImageView
        android:id="@+id/imgSalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_business_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/spinSalle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/spinSalle" />

    <Spinner
        android:id="@+id/spinSalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        app:layout_constraintStart_toEndOf="@id/imgSalle"
        app:layout_constraintTop_toBottomOf="@id/viewDivider2" />

    <View
        android:id="@+id/viewDivider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="15dp"
        android:background="#959292"
        app:layout_constraintTop_toBottomOf="@id/spinSalle" />

    <ImageView
        android:id="@+id/imgHost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewDivider3"
        android:background="@drawable/ic_person_black_24dp"/>

    <EditText
        android:id="@+id/editHost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintHost"
        android:layout_marginStart="10dp"
        android:maxLines="1"
        app:layout_constraintTop_toTopOf="@id/imgHost"
        app:layout_constraintBottom_toBottomOf="@id/imgHost"
        app:layout_constraintStart_toEndOf="@id/imgHost"
        android:background="#02FAF9F9"/>

    <View
        android:id="@+id/viewDivider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="15dp"
        android:background="#959292"
        app:layout_constraintTop_toBottomOf="@id/editHost" />

    <ImageView
        android:id="@+id/imgParti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/ic_group_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/viewDivider4"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editParti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintParti"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/imgParti"
        app:layout_constraintBottom_toBottomOf="@id/imgParti"
        app:layout_constraintStart_toEndOf="@id/imgParti"
        android:background="#02FAF9F9"
        android:inputType="textEmailAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>